# printerator

./: Cargo.toml  README.md
src/: lib.rs  printer.rs  printerd.rs
tests/: test.rs
